2017-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Simplify the tweaking of `message'.

2017-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-cookie.el (w3m-cookie-clear): Make it a user command.
	(w3m-cookie): Open it as a new session ([emacs-w3m:12685]).

	* w3m.el (w3m-select-buffer-delete-buffer): Don't move point forward
	([emacs-w3m:12684]); clarify doc string.

	* w3m-filter.el (w3m-filter-rt): Bind ephemeral var ([emacs-w3m:12682]).

2017-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-rt, w3m-filter-slashdot):
	Update ([emacs-w3m:12678]).

2017-06-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-compile-file): Silence compile warnings when
	compiling w3m-filter.el ([emacs-w3m:12676]).

2017-06-11  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-delete-regions, w3m-filter-replace-regexp):
	Make a return value always mean deletion or replacement is made
	([emacs-w3m:12674]).

2017-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-delete-regions, w3m-filter-replace-regexp):
	Refactor to Lisp macros.
	(w3m-filter-geocities-remove-garbage, w3m-filter-infoseek-remove-ads)
	(w3m-filter-ascii24-remove-ads): New filters that replace the ones
	having existed in w3m-filter-configuration ([emacs-w3m:12669]).

2017-05-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-delete-regions, w3m-filter-replace-regexp):
	Allow optional args used to modify search/replace boundaries.
	(w3m-filter-rt, w3m-filter-slashdot): New filters.
	(w3m-filter-configuration): Add new filters ([emacs-w3m:12666]).

	* w3m.el (w3m-uri-replace-alist): Remove Google groups, Altavista, and
	iij-archie ([emacs-w3m:12661]).

	* w3m-search.el (w3m-search-engine-alist): Remove Google groups that
	requires javascript and alltheweb that is forwarded to Yahoo!; use
	https on all urls ([emacs-w3m:12657]).

2017-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>
